added create account, modals work for each listing

--- a/create.html
+++ b/create.html
@@ -13,22 +13,15 @@
 
 </head>
 <body>
-    <h1>Tour with a local</h1>
-    <h3>Tourist Login</h3>
-    <form action="./page1.html">
-        Username: <input type="text"><br>
-        Password: <input type="password"><br>
-        <input type="submit" value="Submit">
+    <form>
+        User Name:<br>
+        <input type="text"><br>
+        Email:<br>
+        <input type="email"><br>
+        Password:<br>
+        <input type="password"><br>
+        <button type="button" onclick="addUser()">Submit</button>
     </form>
-
-    <h3>Local Login</h3>
-    <form action="./page2.html">
-        Username: <input type="text"><br>
-        Password: <input type="password"><br>
-        <input type="submit" value="Submit">
-    </form>
-    <br><br>
-    <button onclick="signup()">Sign up</button>
 </body>
 <footer>Daniel Button &copy; 2018</footer>
 </html>
