--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 
@@ -24,7 +26,10 @@
         <input id="time" type="time"><br>
         Best contact email<br>
         <input id="email" type="email"><br>
+        How much do you want to spend?<br>
+        <input id="offer" type="text"><br>
         <button type="button" onclick="store()">Submit</button>
     </form>
 </body>
+<footer>Daniel Button &copy; 2018</footer>
 </html>
