js and css now load

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,20 @@
         Password: <input type="password"><br>
         <input type="submit" value="Submit">
     </form>
-
+    <h4>or post without an account</h4>
+    <button onclick="window.location.href='/page1'">Post</button>
+    <br><br><br>
     <h3>Local Login</h3>
     <form action="/page2" method="get">
         Username: <input type="text"><br>
         Password: <input type="password"><br>
         <input type="submit" value="Submit">
     </form>
-    <br><br>
+    <h4>or bid without an account</h4>
+    <button onclick="window.location.href='/page2'">Bid</button>
+    <br><br><br>
     <button onclick="signup()">Sign up</button>
 </body>
+<hr>
 <footer>Daniel Button &copy; 2018</footer>
 </html>
