--- a/public/page2.html
+++ b/public/page2.html
@@ -14,7 +14,7 @@
 </head>
 <body onload="getData()">
     <h1>Local</h1>
-    <button onclick="logout()">Log Out</button>
+    <button onclick="window.location.href='/'">Log Out</button>
     <h3>Tours to bid on</h3>
     <ul>
 
