fixed styling errors, added state/country input

--- a/public/page1.html
+++ b/public/page1.html
@@ -16,21 +16,24 @@
     <h1>Tourist</h1>
     <button id="logout" onclick="window.location.href='/'">Log Out</button>
     <form>
-        Location you would like to tour.<br>
+        What city would you like your tour to be in?<br>
         <input id="location" type="text"><br>
-        What do you want to see/do?<br>
+        What state or country would you like your tour to be in?<br>
+        <input id="state" type="text"><br>
+        What do you want to see/do on your tour?<br>
         <input id="description" class="large-text-box" type="text"><br>
-        Desired Date<br>
+        What is your desired date for this tour?<br>
         <input id="date" type="date"><br>
-        Desired Time<br>
+        Desired time?<br>
         <input id="time" type="time"><br>
-        Best contact email<span>&nbsp;(!)</span>
-        <div>This will be the email locals will contact you at about your tour.  It should not be the same as your account email, but rather an email that you don't mind sharing publicly.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! Mail or Hotmail.</div><br>
+        What is the best contact email?<span class="notice">&nbsp;(!)</span>
+        <div class="noticebox">This will be the email locals will contact you at about your tour.  It should not be the same as your account email, but rather an email that you don't mind sharing publicly.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! Mail or Hotmail.</div><br>
         <input id="email" type="email"><br>
         How much do you want to spend?<br>
         <input id="offer" type="text"><br>
         <button type="button" onclick="store()">Submit</button>
     </form>
 </body>
+<hr>
 <footer>Daniel Button &copy; 2018</footer>
 </html>
