--- a/public/page2.html
+++ b/public/page2.html
@@ -16,6 +16,7 @@
     <h1>Local</h1>
     <button onclick="window.location.href='/'">Log Out</button>
     <h3>Tours to bid on</h3>
+    <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (mac) to search results.</h4>
     <ul>
 
     </ul>
