--- a/public/page1.html
+++ b/public/page1.html
@@ -21,7 +21,7 @@
         What state or country would you like your tour to be in?<br>
         <input id="state" type="text"><br>
         What do you want to see/do on your tour?<br>
-        <input id="description" class="large-text-box" type="text"><br>
+        <textarea id="description" class="large-text-box" type="text" cols="40" rows="10"></textarea><br>
         What is your desired date for this tour?<br>
         <input id="date" type="date"><br>
         Desired time?<br>
@@ -30,7 +30,7 @@
         <div class="noticebox">This will be the email locals will contact you at about your tour.  It should not be the same as your account email, but rather an email that you don't mind sharing publicly.  If you need to set up a free temporary email address you can do so with Gmail, Yahoo! Mail or Hotmail.</div><br>
         <input id="email" type="email"><br>
         How much do you want to spend?<br>
-        <input id="offer" type="text"><br>
+        <input id="offer" type="number"><br>
         <button type="button" onclick="store()">Submit</button>
     </form>
 </body>
