--- a/public/create.html
+++ b/public/create.html
@@ -8,11 +8,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 
 </head>
 <body>
+        <header>
+                <h1>Sign Up
+                        <div id="google_translate_element"></div>
+                </h1>
+                </header>
     <form>
         User Name:<br>
         <input type="text"><br>
@@ -22,6 +29,9 @@
         <input type="password"><br>
         <button type="button" onclick="addUser()">Submit</button>
     </form>
+    <br>
+    <button onclick="window.location.href='/'">Go Back</button>
 </body>
+<br><hr>
 <footer>Daniel Button &copy; 2018</footer>
 </html>
