--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 
 </head>
 <body>
+    <header>
+            <h1>Tour With A Local
+            <div id="google_translate_element"></div></h1>
+    </header>
 <div id="loginForm">
-    <h1>Tour With A Local</h1>
     <h3>Looking to request a tour? Log in as a tourist.</h3>
     <form action="/page1" method="get">
         Username: <input type="text"><br>
