--- a/public/page1.html
+++ b/public/page1.html
@@ -25,7 +25,7 @@
     <form onsubmit="store()">
         What city would you like your tour to be in?<br>
         <input id="location" type="text" required><br>
-        What state or country do you want your tour to be in?<br>
+        What state or country is the city in?<br>
         <input id="state" type="text" required><br>
         What do you want to see/do on your tour?<br>
         <textarea id="description" class="large-text-box" type="text" cols="40" rows="10" required></textarea><br>
