--- a/public/page2.html
+++ b/public/page2.html
@@ -22,7 +22,7 @@
     <button onclick="window.location.href='/'">Home</button>
     </header>
     <h2>Tours to bid on</h2>
-    <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (mac) to search results.</h4>
+    <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search results.</h4>
     <ul>
 
     </ul>
