started setting up mysql database

--- a/public/page1.html
+++ b/public/page1.html
@@ -22,7 +22,8 @@
     <button id="logout" onclick="window.location.href='/'">Home</button>
     </header>
     <br>
-    <form onsubmit="store()">
+    <!-- <form onsubmit="store()"> -->
+    <form action="/insert" method="POST">
         What city would you like your tour to be in?<br>
         <input id="location" type="text" required><br>
         What state or country is the city in?<br>
