--- a/public/page2.html
+++ b/public/page2.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tour With A Local -- Local</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
@@ -19,11 +21,19 @@
     <h1>Local
             <div id="google_translate_element"></div>
     </h1>
-    <button onclick="window.location.href='/'">Home</button>
+    <button
+    style="background-color: blue;
+        border: none;
+        color: white;
+        padding: 7px 14px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;" onclick="window.location.href='/'">Home</button>
     </header>
     <h2>Tours to bid on</h2>
     <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search results.</h4>
-    <ul>
+    <ul id="results">
 
     </ul>
 
@@ -33,11 +43,19 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <p>Contact the poster</p>
+      <h3>Contact the poster</h3>
       <form id="email" method="post" enctype="text/plain">
       Your Message to the poster:<br>
       <textarea id="sendM" cols="100" rows="10"></textarea><br>
-      <button type="button" onclick="send()">Submit</button>
+      <button
+      style="background-color: blue;
+        border: none;
+        color: white;
+        padding: 7px 14px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;" type="button" onclick="send()">Submit</button>
       </form>
     </div>
   
