styling changes and added num of people field

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <h1>Tour With A Local
             <div id="google_translate_element"></div></h1>
     </header>
-<div id="loginForm">
+<div style="font-size: 20px;" id="loginForm">
     <h3>Looking to request a tour? Log in as a tourist.</h3>
     <form action="/page1" method="get">
         Username: <input style="font-size: 20px;" type="text" required><br>
@@ -35,7 +35,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" type="submit">
+        font-size: 20px;" type="submit">
     </form>
     <h3>or post without an account</h3>
     <button
@@ -46,7 +46,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" onclick="window.location.href='/page1'">Post</button>
+        font-size: 20px;" onclick="window.location.href='/page1'">Post</button>
     <br><br><hr><br>
     <h3>Looking to give a tour? Log in as a local.</h3>
     <form action="/page2" method="get">
@@ -61,7 +61,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" type="submit">
+        font-size: 20px;" type="submit">
     </form>
     <h3>or search without an account</h3>
     <button
@@ -72,18 +72,18 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" onclick="window.location.href='/page2'">Search</button>
+        font-size: 20px;" onclick="window.location.href='/page2'">Search</button>
     <br>
     
 </div>
 <div id="how">
     <h3>How Tour With A Local works.</h3>
     <p>
-        Tour With A Local connects tourists with locals. <br><br>
+        Tour With A Local connects tourists and locals. <br><br>
         A tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend on doing those things.<br><br>
         Locals can then search through postings of tour requests made by tourists and reach out to the poster in helping them meet their travel plans.<br><br>
-        Tourists benefit by getting a personallized tour of the city they're visiting at a price that fits their budget.<br><br>
-        Locals benefit by making extra income showing people around their city.<br><br>
+        Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
+        Locals benefit by making extra income giving tours in their spare time.<br><br>
         Both parties benefit by making a connection to someone they might not have ever met.<br><br>
         <button
         style="background-color: blue;
@@ -93,7 +93,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" onclick="signup()">Sign up</button>
+        font-size: 20px;" onclick="signup()">Sign up</button>
     </p>
 </div>
 </body>
