--- a/public/page3.html
+++ b/public/page3.html
@@ -22,13 +22,13 @@
                         <div id="google_translate_element"></div>
                 </h1>
                 </header>
-    <form onsubmit="addUser()">
+    <form style="font-size: 20px;" onsubmit="addUser()">
         User Name:<br>
-        <input style="font-size: 20px;" type="text" required><br>
+        <input style="font-size: 20px;" type="text" maxlength="254" required><br>
         Email:<br>
-        <input style="font-size: 20px;" type="email" required><br>
+        <input style="font-size: 20px;" type="email" maxlength="254" required><br>
         Password:<br>
-        <input style="font-size: 20px;" type="password" required><br>
+        <input style="font-size: 20px;" type="password" maxlength="254" required><br>
         Account Type:<br>
         <input style="font-size: 20px;" type="radio" name="account" value="tourist" checked> Tourist&nbsp;&nbsp;&nbsp;
         <input style="font-size: 20px;" type="radio" name="account" value="local"> Local<br><br>
@@ -40,7 +40,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" type="submit">
+        font-size: 20px;" type="submit">
     </form>
     <br>
     <button
@@ -51,7 +51,7 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;" onclick="window.location.href='/'">Go Back</button>
+        font-size: 20px;" onclick="window.location.href='/'">Home</button>
 </body>
 <br><hr>
 <footer>Daniel Button &copy; 2018</footer>
