added tourist and local tables.  Sign up now works

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
     <h3>How Tour With A Local works.</h3>
     <p>
         Tour With A Local connects tourists and locals. <br><br>
-        A tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend on doing those things.<br><br>
+        A tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend for a local to take them to do and see those things.<br><br>
         Locals can then search through postings of tour requests made by tourists and reach out to the poster in helping them meet their travel plans.<br><br>
         Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
         Locals benefit by making extra income giving tours in their spare time.<br><br>
