--- a/public/page2.html
+++ b/public/page2.html
@@ -6,7 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tour With A Local -- Local</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
@@ -17,30 +25,61 @@
 
 </head>
 <body onload="getData()">
-    <header>
-    <h1>Local
-            <div id="google_translate_element"></div>
-    </h1>
-    <button
-    style="background-color: blue;
-        border: none;
-        color: white;
-        padding: 7px 14px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;" onclick="window.location.href='/'">Home</button>
-    </header>
-    <h2>Tours to bid on</h2>
-    <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search results.</h4>
-    <ul id="results">
+        <div class="row">
+                <div class="col-md-12">
+                    <header>
+                        <nav class="navbar">
+                        <span>Tour With a Local</span>
+                            <ul class="nav justify-content-end">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="page4">How it works</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/page3">Sign Up</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Log In
+                                    </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="/page5">Tourist</a>
+                                            <a class="dropdown-item" href="/page6">Local</a>
+                                        </div>
+                                </li>
+                                <div id="google_translate_element"></div>
+                            </ul>
+                        </nav>
+                    </header>
+                </div>
+            </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Tours to bid on</h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Press <code>ctrl-f</code> (PC) or <code>cmd-f</code> (Mac) to search results.</h4>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="listings">
 
-    </ul>
-
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
-    <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Contact the poster</h2>
