--- a/public/page4.html
+++ b/public/page4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tour With A Local -- Home</title>
+    <title>Tour With a Local -- How it works</title>
 
     
 
@@ -53,50 +53,25 @@
                         </ul>
                     </nav>
                 </header>
-                </div>
             </div>
-    <div class="container">
-
-            
-
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                            <div id="buttonGroup" class="carousel-caption">
-                                    <div class="row justify-content-md-center">
-                                            <div class="col-md-3">
-                                                    <button class="btn btn-warning btn-lg" onclick="window.location.href='/page1'">Request a tour</button>
-                                                </div>
-                                                <div class="col-md-3"></div>
-                                                <div class="col-md-3">
-                                                    <button class="btn btn-success btn-lg" onclick="window.location.href='/page2'">Search tour requests</button>
-                                                    <br>
-                                                </div>
-                                                </div>
-                                            </div>
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="./images/greece.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/italy.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
+        </div>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <span>How Tour With a Local works</span><br><br>
+                <p>
+                    Tour With A Local connects tourists and locals. <br><br>
+                    A tourist (anyone visiting a city or area) posts details about the destination they are visiting, the things they want to do and see when they are there, and how much they want to spend for a local to take them to do and see those things.<br><br>
+                    Locals can then search through postings of tour requests made by tourists and reach out to the poster in helping them meet their travel plans.<br><br>
+                    Tourists benefit by getting a unique experience at a price that fits their budget.<br><br>
+                    Locals benefit by making extra income giving tours in their spare time.<br><br>
+                    Both parties benefit by making a connection to someone they might not have ever met.<br><br>
+                    <button class="btn btn-primary" onclick="signup()">Sign up</button>
+                </p>
+            </div>
+        </div>
     </div>
 </body>
-<div class="footer">
-    <br>
-    <hr>
-    <footer>Daniel Button &copy; 2018</footer>
-</div>
+<hr>
+<footer>Daniel Button &copy; 2018</footer>
 </html>
