--- a/public/page5.html
+++ b/public/page5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tour With A Local -- Home</title>
+    <title>Tour With a Local -- How it works</title>
 
     
 
@@ -53,50 +53,30 @@
                         </ul>
                     </nav>
                 </header>
-                </div>
             </div>
-    <div class="container">
-
-            
-
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                            <div id="buttonGroup" class="carousel-caption">
-                                    <div class="row justify-content-md-center">
-                                            <div class="col-md-3">
-                                                    <button class="btn btn-warning btn-lg" onclick="window.location.href='/page1'">Request a tour</button>
-                                                </div>
-                                                <div class="col-md-3"></div>
-                                                <div class="col-md-3">
-                                                    <button class="btn btn-success btn-lg" onclick="window.location.href='/page2'">Search tour requests</button>
-                                                    <br>
-                                                </div>
-                                                </div>
-                                            </div>
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="./images/greece.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/italy.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/london.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
+        </div>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Looking to request a tour? Log in as a tourist.</h3>
+                <form action="/page1" method="get">
+                    Username: <input style="font-size: 20px;" type="text" required><br>
+                    Password: <input style="font-size: 20px;" type="password" required><br>
+                    <input
+                    style="background-color: blue;
+                    border: none;
+                    color: white;
+                    padding: 7px 14px;
+                    margin: 20px 5px;
+                    text-align: center;
+                    text-decoration: none;
+                    display: inline-block;
+                    font-size: 20px;" type="submit">
+                </form>
+            </div>
+        </div>
     </div>
 </body>
-<div class="footer">
-    <br>
-    <hr>
-    <footer>Daniel Button &copy; 2018</footer>
-</div>
+<hr>
+<footer>Daniel Button &copy; 2018</footer>
 </html>
